# ai_learn

./: .env.example  .gitignore  README.md  check_env.sh  check_word.sh  main.py  pyproject.toml  refresh.sh  run.sh  stop.sh
TD/: 01-总览.md  03-数据库设计.md  04-Go微服务设计.md  05-AI-Agent设计.md
help/: commands.md
service-data/: go.mod
service-data/cmd/check/: main.go
service-data/cmd/initdb/: main.go
service-data/cmd/refresh/: main.go
service-data/cmd/server/: main.go
service-data/internal/api/: api.go
service-data/internal/dict/: dict.go
service-data/internal/model/: model.go
service-data/internal/sm2/: sm2.go  sm2_test.go
service-data/internal/store/: store.go  store_test.go
service-data/migrations/: schema.sql
sub_agent_tg_okx/: .env.example  README.md  config.py  main.py  monitor.py  notifier.py  okx_client.py  run.sh  stop.sh
wordbot/: __init__.py  bot.py  config.py  data_client.py  formatting.py  reading.py
