[project]
name = "ai-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chroma>=0.2.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.6",
    "langchain-ollama>=1.1.0",
    "python-dotenv>=1.2.2",
]
